<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/register_title"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">
            <com.yuyi.family.component.EditTextWithDel
                android:id="@+id/register_name"
                android:drawableLeft="@drawable/name"
                android:hint="@string/register_name"
                android:textCursorDrawable="@drawable/input_cursor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:ems="10"
                android:textColorHint="@color/hintColor"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:layout_centerVertical="true"
                android:background="@drawable/login_input_border"/>
            <!--<com.yuyi.family.component.EditTextWithDel-->
                <!--android:id="@+id/register_id"-->
                <!--android:drawableLeft="@drawable/id_card"-->
                <!--android:hint="@string/register_id"-->
                <!--android:textCursorDrawable="@drawable/input_cursor"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_margin="10dp"-->
                <!--android:ems="10"-->
                <!--android:inputType="text"-->
                <!--android:textColorHint="@color/hintColor"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:textSize="18dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:background="@drawable/login_input_border"/>-->
            <com.yuyi.family.component.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/register_image"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_button"
                android:layout_margin="15dp"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/register_image_button"
                android:text="@string/register_image_button"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_button"
                android:layout_margin="15dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:id="@+id/register_button"
                android:textSize="18dp"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:background="@drawable/button_drawable"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
